syntax = "proto3";

package user;

service UserService {
  rpc FindUserById (FindUserByIdRequest) returns (FindUserByIdResponse);
}

message FindUserByIdRequest {
  string userId = 1;
}

message FindUserByIdResponse {
  bool exists = 1;
}